[gd_scene load_steps=2 format=3 uid="uid://diwgr6oldptb0"]

[ext_resource type="Script" path="res://scripts/wakeup.gd" id="1_hbypj"]

[node name="OpenEyes" type="Node2D"]
script = ExtResource("1_hbypj")

[node name="Rec_blanc" type="ColorRect" parent="."]
visible = false
offset_left = -20.0
offset_top = -80.0
offset_right = 1176.0
offset_bottom = 640.0
color = Color(1, 0.12549, 0.0862745, 1)

[node name="Rec_center" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = -39.0
offset_right = 1174.0
offset_bottom = 681.0

[node name="Rec_haut" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = -351.0
offset_right = 1174.0
offset_bottom = 329.0
color = Color(0, 0, 0, 1)

[node name="Rec_bas" type="ColorRect" parent="."]
offset_left = -13.0
offset_top = 307.0
offset_right = 1173.0
offset_bottom = 1025.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
